--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 	<title>Translate Me - Al Bhed</title>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>	
+  <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>  
 	<script type="text/javascript" src="js/translate.js"></script>
 </head>
 <body>
 	<h1>Rikku presents ~ Translate Me - Al Bhed</h1>
-	<p>Al Bhed to English</p>
-	<textarea rows="5" cols="50" id="albhed-to-english" autofocus></textarea>
-	<p>English to Al Bhed</p>
-	<textarea rows="5" cols="50" id="english-to-albhed"></textarea>
+	<p>Al Bhed</p>
+	<textarea rows="5" cols="50" id="albhed" autofocus></textarea>
+	<p>English</p>
+	<textarea rows="5" cols="50" id="english" ></textarea>
+</body>
 </html>
