idea is there.. need to work logic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 	<h1>Rikku presents ~ Translate Me - Al Bhed</h1>
 	<p>Al Bhed</p>
-	<textarea rows="5" cols="50" id="albhed" autofocus></textarea>
+	<textarea rows="5" cols="50" id="albhed" onkeyup="update()" autofocus></textarea>
 	<p>English</p>
 	<textarea rows="5" cols="50" id="english" ></textarea>
 </body>
