--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
 	<h1>Rikku presents ~ Translate Me - Al Bhed</h1>
 	<p>Al Bhed</p>
-	<textarea rows="5" cols="50" id="albhed" onkeyup="update()" autofocus></textarea>
+	<textarea rows="5" cols="50" id="albhed" onkeyup="albhedToEnglish()" autofocus></textarea>
 	<p>English</p>
-	<textarea rows="5" cols="50" id="english" ></textarea>
+	<textarea rows="5" cols="50" id="english" onkeyup="englishToAlbhed()"></textarea>
 </body>
 </html>
