bunch of css update

--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
 	<script type="text/javascript" src="js/translate.js"></script>
 </head>
 <body>
-	<h1>Rikku presents ~ Translate Me - Al Bhed</h1>
-  <div id="container">
-    <div id="albhed-textbox">
-  	 <label>Al Bhed</label>
-  	 <textarea rows="10" cols="50" id="albhed" onkeyup="albhedToEnglish()" autofocus></textarea>
+  <div id="background"></div>
+  	<h1>Rikku presents ~ Translate Me - Al Bhed</h1>
+    <div id="info">
+      <p> Welcome to Translate Me - Al Bhed. </p>
     </div>
-    <div id="english-textbox">
-  	 <label>English</label>
-  	 <textarea rows="10" cols="50" id="english" onkeyup="englishToAlbhed()"></textarea>
-    </div>
+    <div id="container">
+      <div id="albhed-textbox">
+    	 <label>Al Bhed</label>
+    	 <textarea rows="10" cols="50" id="albhed" onkeyup="albhedToEnglish()" autofocus></textarea>
+      </div>
+      <div id="english-textbox">
+    	 <label>English</label>
+    	 <textarea rows="10" cols="50" id="english" onkeyup="englishToAlbhed()"></textarea>
+      </div>
   </div>
 </body>
 </html>
