--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <div id="background"></div>
   	<h1>Rikku presents ~ Translate Me - Al Bhed</h1>
     <div id="info">
-      <p> Welcome to Translate Me - Al Bhed. </p>
+      <p> Still confuse with your Al Bhed? Then welcome to Translate Me - Al Bhed. Translate all your Al Bhed to English and vice versa. If you do not want the word
+        to be translated, then simply hide with [] bracket. ex: [hide this text]</p>
     </div>
     <div id="container">
       <div id="albhed-textbox">
