even more css styling, move font to folder

--- a/index.html
+++ b/index.html
@@ -3,15 +3,16 @@
 <head>
 	<title>Translate Me - Al Bhed</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="icon" href="css/favicon.ico">
   <script type="text/javascript" src="js/jquery-1.11.0.min.js"></script>  
 	<script type="text/javascript" src="js/translate.js"></script>
 </head>
 <body>
   <div id="background"></div>
-  	<h1>Rikku presents ~ Translate Me - Al Bhed</h1>
+  	<h1>TRANSLATE ME <div>AL BHED</div></h1>
     <div id="info">
-      <p> Still confuse with your Al Bhed? Then welcome to Translate Me - Al Bhed. Translate all your Al Bhed to English and vice versa. If you do not want the word
-        to be translated, then simply hide with [] bracket. ex: [hide this text]</p>
+      <p> Still confuse with your Al Bhed? Then welcome to Translate Me Al Bhed. Translate all your Al Bhed to English and vice versa. If you do not want the word
+        to be translated, then simply hide with [] bracket. ex: [hide this text].</p>
     </div>
     <div id="container">
       <div id="albhed-textbox">
@@ -23,5 +24,6 @@
     	 <textarea rows="10" cols="50" id="english" onkeyup="englishToAlbhed()"></textarea>
       </div>
   </div>
+  <div id="footer">Another thing made by <a href="https://github.com/anthonychin">@anthonychin</a></div>
 </body>
 </html>
